--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -26,3 +26,7 @@ th, td {
     margin: 5px 10px;
     padding: 6px;
 }
+.zebra tr:nth-child(even) {
+    background-color: rgb(2, 2, 22);
+    color: whitesmoke;
+}
