--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -1,6 +1,6 @@
 <h3>Orbit Report</h3>
 
-<table>
+<table class="zebra">
    <tr class="header-row">
       <th class="sortable" (click)="sort('name')">Name</th>
       <th class="sortable" (click)="sort('type')">Type</th>
